LU-3750 mdt: fix typo in mdt_txn_stop_cb()

Wrong check was added to mdt_txn_stop_cb() to identify object
for version update. Version is not updated for all local objects
due to that typo and leads to replay-vbr.sh failures

Test-Parameters: testgroup=review,failover
Signed-off-by: Mikhail Pershin <mike.pershin@intel.com>
Change-Id: I9c41f7208d7aa8cf307858b9c6f51ae73c1081e4
Reviewed-on: http://review.whamcloud.com/7787
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: wangdi <di.wang@intel.com>